[package]
name = "multiemu-locale"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }

[build-dependencies]
rayon = { workspace = true }
serde = { workspace = true }
csv = "1.3"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"