[package]
name = "multiemu-rom"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tracing = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
redb = { workspace = true }
isolang = { workspace = true }
indexmap = { workspace = true }
camino = { workspace = true }
data-encoding = "2.9"
sha1 = "0.10"
bincode = { version = "2.0", features = ["serde"] }
