[package]
name = "multiemu-rom"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
redb = { workspace = true }
codes-iso-639 = { workspace = true }
codes-iso-3166 = { workspace = true }
bincode = { workspace = true }
data-encoding = { workspace = true }
sha1 = "0.10"

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dev-dependencies]
# FIXME: redb is broken on basically any newlib based rust std implementation until the rust "file_lock" api comes out
redb = { workspace = true }