[package]
name = "multiemu-rom"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
redb = { workspace = true }
codes-iso-639 = { workspace = true }
codes-iso-3166 = { workspace = true }
bincode = { workspace = true }
data-encoding = { workspace = true }
sha1 = "0.10"

