[package]
name = "multiemu-runtime"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-rom = { workspace = true }
multiemu-input = { workspace = true }

multiemu-graphics = { workspace = true }
multiemu-audio = { workspace = true }
rangemap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bitvec = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
rustc-hash = { workspace = true }
data-encoding = { workspace = true }
bincode = { workspace = true }
ringbuffer = { workspace = true }
sealed = { workspace = true }
crossbeam = { workspace = true }
scc = { workspace = true }
redb = { workspace = true }
itertools = { workspace = true }
indexmap = "2.10"
nohash = "0.2"
