[package]
name = "fluxemu-shell-destinezite"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kay <lambdadeltakay@proton.me>"]
description = "A multi system emulator"

[dependencies]
fluxemu-runtime = { workspace = true }
fluxemu-frontend = { workspace = true }
fluxemu-audio = { workspace = true }
fluxemu-definition-chip8 = { workspace = true }
fluxemu-definition-nes = { workspace = true }
fluxemu-definition-atari2600 = { workspace = true }
fluxemu-definition-atarilynx = { workspace = true }
tracing = { workspace = true }
nalgebra = { workspace = true }
bytemuck = { workspace = true }
tracing-subscriber = { workspace = true }
palette = { workspace = true }
uuid = { workspace = true }
ringbuffer = { workspace = true }
clap = { workspace = true }
egui = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
winit = { version = "0.30", features = ["android-native-activity"] }
egui-winit = { version = "0.33" }
cpal = "0.16"
gilrs = "0.11"
softbuffer = "0.4"

[features]
default = ["vulkan"]
vulkan = [
    "fluxemu-runtime/vulkan",
    "fluxemu-definition-chip8/vulkan",
    "fluxemu-definition-nes/vulkan",
    "fluxemu-definition-atari2600/vulkan",
    "fluxemu-definition-atarilynx/vulkan",
]
opengl = [
    "fluxemu-runtime/opengl",
    "fluxemu-definition-chip8/opengl",
    "fluxemu-definition-nes/opengl",
    "fluxemu-definition-atari2600/opengl",
    "fluxemu-definition-atarilynx/opengl",
]

[package.metadata.deb]
maintainer = "Kay <lambdadeltakay@proton.me>"
